--- a/app/styles/_globals.scss
+++ b/app/styles/_globals.scss
@@ -1,6 +1,17 @@
 @import url(http://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic);
 @import url(http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic);
 
+
+*{
+    box-sizing: border-box;
+}
+
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+
 html{
 	width: 100%;
 	height: 100%;
@@ -110,4 +121,9 @@ big{
 
 div,section,article{
 	display: block;
+}
+
+.outer-container{
+	width: 100%;
+	height: 100%;
 }
